--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JavaApplication7
+application.vendor=BinDz
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,20 @@ dist.jar=${dist.dir}/JavaApplication7.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication7
+endorsed.classpath=
 excludes=
+file.reference.jdatepicker-2.0.3.jar=C:\\Users\\BinDz\\Downloads\\jdatepicker-2.0.3.jar
+file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\BinDz\\Desktop\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
+file.reference.PlaceHolder.jar=C:\\Users\\BinDz\\Desktop\\1479947884_PlaceHolder\\PlaceHolder.jar
+file.reference.RojeruSan.parte1.jar=C:\\Users\\BinDz\\Desktop\\1515878801_RojeruSan.parte1.jar\\RojeruSan.parte1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.PlaceHolder.jar}:\
+    ${file.reference.RojeruSan.parte1.jar}:\
+    ${file.reference.jdatepicker-2.0.3.jar}:\
+    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +82,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaApplication7
-main.class=javaapplication7.JavaApplication7
+main.class=view.FrmMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
