--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication7
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\BinDz\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jdatepicker-2.0.3.jar=C:\\Users\\BinDz\\Downloads\\jdatepicker-2.0.3.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\BinDz\\Desktop\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.PlaceHolder.jar=C:\\Users\\BinDz\\Desktop\\1479947884_PlaceHolder\\PlaceHolder.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.PlaceHolder.jar}:\
     ${file.reference.RojeruSan.parte1.jar}:\
     ${file.reference.jdatepicker-2.0.3.jar}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
