--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -36,7 +36,9 @@ dist.jlink.output=${dist.jlink.dir}/JavaApplication7
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\BinDz\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\BinDz\\Desktop\\jcommon-1.0.23\\jcommon-1.0.23\\jcommon-1.0.23.jar
 file.reference.jdatepicker-2.0.3.jar=C:\\Users\\BinDz\\Downloads\\jdatepicker-2.0.3.jar
+file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\BinDz\\Desktop\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\BinDz\\Desktop\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.PlaceHolder.jar=C:\\Users\\BinDz\\Desktop\\1479947884_PlaceHolder\\PlaceHolder.jar
 file.reference.RojeruSan.parte1.jar=C:\\Users\\BinDz\\Desktop\\1515878801_RojeruSan.parte1.jar\\RojeruSan.parte1.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.RojeruSan.parte1.jar}:\
     ${file.reference.jdatepicker-2.0.3.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -84,7 +88,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaApplication7
-main.class=view.FrmMain
+main.class=view.FrmLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
