--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -35,13 +35,33 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication7
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\activation-1.1.1.jar
+file.reference.commons-codec-1.13.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\commons-codec-1.13.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\commons-compress-1.19.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.06.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\curvesapi-1.06.jar
+file.reference.jaxb-api-2.3.1.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\jaxb-api-2.3.1.jar
+file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.jaxb-impl-2.3.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\jaxb-impl-2.3.2.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\BinDz\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\BinDz\\Desktop\\jcommon-1.0.23\\jcommon-1.0.23\\jcommon-1.0.23.jar
 file.reference.jdatepicker-2.0.3.jar=C:\\Users\\BinDz\\Downloads\\jdatepicker-2.0.3.jar
 file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\BinDz\\Desktop\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
+file.reference.junit-4.12.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\BinDz\\Desktop\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.PlaceHolder.jar=C:\\Users\\BinDz\\Desktop\\1479947884_PlaceHolder\\PlaceHolder.jar
+file.reference.poi-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-4.1.2.jar
+file.reference.poi-examples-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-examples-4.1.2.jar
+file.reference.poi-excelant-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-excelant-4.1.2.jar
+file.reference.poi-ooxml-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-ooxml-4.1.2.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-ooxml-schemas-4.1.2.jar
+file.reference.poi-scratchpad-4.1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\poi-scratchpad-4.1.2.jar
 file.reference.RojeruSan.parte1.jar=C:\\Users\\BinDz\\Desktop\\1515878801_RojeruSan.parte1.jar\\RojeruSan.parte1.jar
+file.reference.SparseBitSet-1.2.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\SparseBitSet-1.2.jar
+file.reference.xmlbeans-3.1.0.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +72,27 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19-demo.jar}
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-codec-1.13.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.jaxb-api-2.3.1.jar}:\
+    ${file.reference.jaxb-core-2.3.0.1.jar}:\
+    ${file.reference.jaxb-impl-2.3.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.poi-examples-4.1.2.jar}:\
+    ${file.reference.poi-excelant-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.poi-scratchpad-4.1.2.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
