fix some bug validation

--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.jcommon-1.0.23.jar=C:\\Users\\BinDz\\Desktop\\jcommon-1.0.23\\jco
 file.reference.jdatepicker-2.0.3.jar=C:\\Users\\BinDz\\Downloads\\jdatepicker-2.0.3.jar
 file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\BinDz\\Desktop\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
 file.reference.junit-4.12.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\junit-4.12.jar
+file.reference.libs-jfreechart-1.0.19=C:\\Users\\BinDz\\Desktop\\Java_App_Student_Manager-master_2\\Java_App_Student_Manager-master\\App_Manager\\libs\\jfreechart-1.0.19
 file.reference.log4j-1.2.17.jar=C:\\Users\\BinDz\\Desktop\\poi-bin-4.1.2-20200217\\poi-4.1.2\\lib\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\BinDz\\Desktop\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.PlaceHolder.jar=C:\\Users\\BinDz\\Desktop\\1479947884_PlaceHolder\\PlaceHolder.jar
@@ -92,7 +93,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-4.1.2.jar}:\
     ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
     ${file.reference.poi-scratchpad-4.1.2.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.libs-jfreechart-1.0.19}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
